# ssh-terminal-manager

./: README.md  pyproject.toml
src/ssh_terminal_manager/: __init__.py  error.py  errors.py  manager.py  ping.py  ping_client.py  ssh.py  state.py  terminal.py
src/ssh_terminal_manager/default_collections/: linux.py  windows_cmd.py  windows_ps.py
