[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh_terminal_manager"
version = "0.9.2"
authors = [
  { name="zhbjsh", email="zhbjsh@outlook.com" },
]
description = "Use terminal commands to control and monitor remote devices"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = [
  "ssh", 
  "terminal",
  "console",
  "shell",
  "bash",
  "cmd",
  "power shell",
  "commands",
  "command line"
]
dependencies = [
  "icmplib >= 3.0",
  "paramiko >= 3.2.0",
  "terminal-manager >= 0.9.2",
  "wakeonlan >= 3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/zhbjsh/ssh-terminal-manager"
"Bug Tracker" = "https://github.com/zhbjsh/ssh-terminal-manager/issues"