[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssh_terminal_manager"
version = "1.1.3"
authors = [
  { name="zhbjsh", email="zhbjsh@outlook.com" },
]
description = "Use terminal commands to control and monitor remote devices"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
keywords = [
  "ssh",
  "terminal",
  "console",
  "shell",
  "bash",
  "cmd",
  "power shell",
  "commands",
  "command line"
]
dependencies = [
  "async-timeout >= 4.0.2",
  "icmplib >= 3.0",
  "paramiko >= 3.4.1",
  "terminal-manager >= 1.0.6",
  "wakeonlan >= 3.0.0"
]

[project.urls]
"Homepage" = "https://github.com/zhbjsh/ssh-terminal-manager"
"Bug Tracker" = "https://github.com/zhbjsh/ssh-terminal-manager/issues"